data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1271.wast
;; 2. **Test with Nested Blocks and Calls:**    - Create nested blocks in module A that use `br` to break out to various levels and call multiple imported functions from module B. The aim is to examine if the control flow and stack integrity are maintained correctly through complex nested structures and cross-module calls.    - **Constraint Checked:** Stack management correctness in deeply nested control contexts with `br` instructions.    - **Relation to Constraint:** Ensures that nested block operations function properly when control flows across different modules.

(assert_invalid
  (module
    (func $nested-blocks-and-calls 
      (block 
        (block 
          (block (br 2)) 
        ) 
        (call $external_func) 
      )
      (call $another_external_func)
    )
    (import "moduleB" "external_func" (func $external_func))
    (import "moduleB" "another_external_func" (func $another_external_func))
  )
  "type mismatch"
)